--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital@0;1&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -17,9 +17,24 @@ code {
 }
 
 @layer components {
-  h1 {
-    color: red;
-    font-size: 100px;
+  .video-background video {
+    @apply object-cover;
   }
-  
+  .content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    color: white;
+  }
+
+  /* card */
+  .card-button {
+    background-color: rgba(255, 255, 255, 0.2);
+  }
+  .btn-active {
+    background-color: rgba(255, 255, 255, 0.2);
+    color: white;
+  }
 }
