--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -30,10 +30,19 @@ code {
     color: white;
   }
 
-  /* card */
+  /* card-page */
   
   .btn-active {
     background-color: rgba(255, 255, 255, 0.2);
     color: white;
+  }
+
+  /* card-preview-page */
+
+  .card-preview-wrap {
+    background: url('../../public/assets/images/mountains-bcg.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 }
